--- a/client/src/app/modules/crm/components/webinar-participant/webinar-participant.component.html
+++ b/client/src/app/modules/crm/components/webinar-participant/webinar-participant.component.html
@@ -14,7 +14,7 @@
     </table>
 
     <sort-table [actions]="tableActionWebinarParticipant" [columns]="displayedColumnsWebinarParticipants"
-      [values]="webinarParticipants" tableName="webinarParticipants" [isSmallestHeight]="true"
+      [values]="webinarParticipants" tableName="webinarParticipants"
       *ngIf="displayedColumnsWebinarParticipants && displayedColumnsWebinarParticipants.length>0 "
       [displayTotalLines]="true">
     </sort-table>
