--- a/client-myjss/src/app/modules/tools/components/webinars/webinars.component.html
+++ b/client-myjss/src/app/modules/tools/components/webinars/webinars.component.html
@@ -18,14 +18,21 @@
 </section>
 <section class="dark-blue-dropdown">
   <section class="container pt-5 pb-lg-2 pb-xl-4 py-xxl-5 my-5">
-    <div class="row pb-1 pb-sm-3 pb-lg-4">
+    <div class="row pb-1 pb-sm-3 pb-lg-4 d-flex align-items-center">
       <div class="col-lg-4 pe-xxl-4">
+        <div class="text-warning flex-shrink-0 mb-4">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M12 0L12.6798 4.12733C13.2879 7.81883 16.1812 10.7121 19.8727 11.3202L24 12L19.8727 12.6798C16.1812 13.2879 13.2879 16.1812 12.6798 19.8727L12 24L11.3202 19.8727C10.7121 16.1812 7.81882 13.2879 4.12733 12.6798L0 12L4.12733 11.3202C7.81883 10.7121 10.7121 7.81882 11.3202 4.12733L12 0Z">
+            </path>
+          </svg>
+        </div>
         <h2 class="h2 pe-xxl-5 me-xl-4 mb-md-0 text-white">Ne manquez pas notre prochain webinaire le 24 mars à 13h00
         </h2>
       </div>
 
       <div class="col-lg-8 col-xl-7 offset-xl-1">
-        <form class="row g-4 needs-validation" novalidate>
+        <form class="row g-4">
           <div class="col-sm-6">
             <generic-input class="form-control form-control-lg" [(model)]="webinarParticipant.firstname" label="Prénom*"
               placeholder="Prénom*" [form]="webinarsForm" propertyName="firstname" [isMandatory]="true"
@@ -44,8 +51,8 @@
           </div>
           <div class="col-sm-6">
             <generic-input class="form-control form-control-lg" [(model)]="webinarParticipant.phoneNumber"
-              label="Téléphone*" placeholder="Numéro de téléphone*" [form]="webinarsForm" propertyName="phoneNumber"
-              [isMandatory]="true" [isDisabled]="false" [maxLength]="50" type="text"></generic-input>
+              label="Téléphone" placeholder="Numéro de téléphone" [form]="webinarsForm" propertyName="phoneNumber"
+              [isMandatory]="false" [isDisabled]="false" [maxLength]="50" type="text"></generic-input>
           </div>
           <div class="col-12">
             <div class="form-check form-check-inline">
@@ -61,8 +68,37 @@
         </form>
       </div>
     </div>
+
+    <div *ngIf="webinarParticipant">
+      <div class="alert alert-danger d-flex mb-0 mb-2 w-100" role="alert"
+        *ngIf="checkedOnce && !webinarParticipant.firstname ">
+        <i class="ai-octagon-alert fs-xl"></i>
+        <div class="ps-2">Le prénom est obligatoire</div>
+      </div>
+      <div class="alert alert-danger d-flex mb-0 mb-2 w-100" role="alert"
+        *ngIf="checkedOnce && !webinarParticipant.lastname ">
+        <i class="ai-octagon-alert fs-xl"></i>
+        <div class="ps-2">Le nom est obligatoire</div>
+      </div>
+      <div class="alert alert-danger d-flex mb-0 mb-2 w-100" role="alert"
+        *ngIf="checkedOnce && (!webinarParticipant.mail.mail || !validateEmail(webinarParticipant.mail.mail) )">
+        <i class="ai-octagon-alert fs-xl"></i>
+        <div class="ps-2">Le mail est obligatoire</div>
+      </div>
+      <div class="alert alert-danger d-flex mb-0 mb-2 w-100" role="alert" *ngIf="checkedOnce && !isConditionAccepted">
+        <i class="ai-octagon-alert fs-xl"></i>
+        <div class="ps-2">L'acceptation des CGV est obligatoire</div>
+      </div>
+      <div class="alert alert-danger d-flex mb-0 mb-2 w-100" role="alert"
+        *ngIf="checkedOnce && webinarParticipant.phoneNumber &&  !validateFrenchPhone(webinarParticipant.phoneNumber) && !validateInternationalPhone(webinarParticipant.phoneNumber)">
+        <i class="ai-octagon-alert fs-xl"></i>
+        <div class="ps-2">Le numéro de téléphone est incorrect</div>
+      </div>
+    </div>
   </section>
 </section>
+
+
 
 <section class="container overflow-hidden py-5 my-5">
   <div class="row">
