--- a/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
+++ b/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
@@ -111,7 +111,7 @@
                 Devis</a>
             </li>
             <li class="nav-item col col-md-auto">
-              <a class="nav-link " style="cursor: pointer;" (click)="$event">Démo</a>
+              <a class="nav-link " style="cursor: pointer;" [routerLink]="'demo'">Démo</a>
             </li>
             <li class="nav-item col col-md-auto">
               <a class="nav-link " style="cursor: pointer;" (click)="$event">Contact</a>
@@ -158,7 +158,7 @@
             <a class="nav-link " style="cursor: pointer;" [routerLink]="'quotation/identification'">Commande / Devis</a>
           </li>
           <li class="nav-item col col-md-auto">
-            <a class="nav-link " style="cursor: pointer;" (click)="$event">Démo</a>
+            <a class="nav-link " style="cursor: pointer;" [routerLink]="'demo'">Démo</a>
           </li>
           <li class="nav-item col col-md-auto">
             <a class="nav-link " style="cursor: pointer;" (click)="$event">Contact</a>
