--- a/client-myjss/src/app/modules/miscellaneous/components/forms/generic-autocomplete/generic-autocomplete.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/forms/generic-autocomplete/generic-autocomplete.component.html
@@ -3,7 +3,7 @@
     <label [for]="'fl-text'+uniqueId" *ngIf="isDisplayLabel && label && label.length>0"
       class="form-label">{{label}}</label>
     <select class="form-control form-control ps-5" [id]="'fl-text'+uniqueId" [formControlName]="propertyName"
-      (blur)="blurForm()">
+      [required]="isMandatory" (blur)="blurForm()">
       <option *ngFor="let type of filteredTypes" [value]="type">{{displayLabel(type)}}</option>
     </select>
   </div>
