add personal infos from prospect into explaination CustomerMail

--- a/src/main/resources/mails/templates/send-demo-request.html
+++ b/src/main/resources/mails/templates/send-demo-request.html
@@ -125,7 +125,9 @@
                                                                 style="padding-left:10px;padding-right:10px;width:100%;">
                                                                 <p>Bonjour,</p>
                                                                 <p>Nous avons reçu une demande de démo de la part du
-                                                                    client. Merci de prendre contact avec ce dernier.
+                                                                    client suivant </P><span
+                                                                    th:text="${explaination}"></span>
+                                                                <p>. Merci de prendre contact avec ce dernier.
                                                                 </p>
                                                             </td>
                                                         </tr>
