--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -1725,14 +1725,15 @@
           </tr>
           <tr>
             <td>
-              <generic-input [(model)]="constant.mailJssDemoRequest" label="Mail de redirection Jss - Demande de Démo"
-                [form]="constantForm" propertyName="mailJssDemoRequest" [isMandatory]="true" [isDisabled]="!editMode"
+              <generic-input [(model)]="constant.stringMyJssDemoRequestMail"
+                label="Mail de redirection Jss - Demande de Démo" [form]="constantForm"
+                propertyName="mailJssDemoRequest" [isMandatory]="true" [isDisabled]="!editMode"
                 [maxLength]="255"></generic-input>
             </td>
           </tr>
           <tr>
             <td>
-              <generic-input [(model)]="constant.mailJssWebinarRequest"
+              <generic-input [(model)]="constant.stringMyJssWebinarRequestMail"
                 label="Mail de redirection Jss - Inscription webinaire" [form]="constantForm"
                 propertyName="mailJssWebinarRequest" [isMandatory]="true" [isDisabled]="!editMode"
                 [maxLength]="255"></generic-input>
